--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,27 @@
 }
 
 
-.opskriftMain {
+.pageWrap {
 	background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
 	width: 100vw;
 	height: 100vh;
+}
+
+nav {
+	width: 100vw;
+	height: 10vh;
+	background: rgba( 255, 255, 255, 0.25 );
+	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+	border-radius: 10px;
+	border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+li {
+	width: 100px;
+
+}
+
+ul {
+	display: flex;
+	justify-content: flex-end;
 }
