--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,30 +2,64 @@
 * {
 	box-sizing: border-box;
 }
+/* -----------------
+3. Variable
+------------------- */
+:root {
+	--ff-os: "Open Sans", sans-serif;
+	--ff-pf: "Playfair Display", serif;
+  
+	--black: rgba(25, 28, 39, 100);
+	--orange: #D94D1A;
+	--red: rgb(231, 39, 5);
+	--white: rgba(250, 250, 250, 100);
+	--grey: rgb(240, 240, 240);
+  }
+
+body {
+	width: 100vw;
+	height: 100vh;
+	background-color: var(--grey)
+}
+
 
 
 .pageWrap {
-	background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-	width: 100vw;
-	height: 100vh;
+	margin: 0 auto;
+	width: 80%;
+	height: auto;
+}
+
+header {
+	height: 200px;
+	background-color:var(--white);
+}
+
+.logoHeader {
+
+}
+
+img {
+	width: 200px;
 }
 
 nav {
-	width: 100vw;
-	height: 10vh;
-	background: rgba( 255, 255, 255, 0.25 );
-	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-	border-radius: 10px;
-	border: 1px solid rgba( 255, 255, 255, 0.18 );
-}
-
-li {
-	width: 100px;
-	color: white;
-
+	border-top: var(--orange) 1px solid;
+	border-bottom: var(--orange) 1px solid;
 }
 
 ul {
+	list-style-type: none;
 	display: flex;
-	justify-content: flex-end;
+	align-items: center;
+	justify-content: center;
+}
+
+li a {
+	height: 40px;
+	font-size: 8px;
+	margin: 0px 10px;
+	color: black;
+	text-transform: uppercase;
+	text-decoration: none;
 }
