--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,29 @@
 
-* {
-	box-sizing: border-box;
-}
 /* -----------------
-3. Variable
+Variable
 ------------------- */
+
 :root {
-	--ff-os: "Open Sans", sans-serif;
-	--ff-pf: "Playfair Display", serif;
-  
 	--black: rgba(25, 28, 39, 100);
 	--orange: #D94D1A;
-	--red: rgb(231, 39, 5);
+	--red: rgb(253, 241, 241);
 	--white: rgba(250, 250, 250, 100);
 	--grey: rgb(240, 240, 240);
+	--darkGrey: rgb(95, 95, 95);
   }
 
 /* --------------------------------
 UNIVERSAL
 -------------------------------- */
+* {
+	box-sizing: border-box;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 body {
 	width: 100vw;
 	height: 100vh;
-	background-color: var(--grey)
+	background-color: var(--white)
 }
 
 .pageWrap {
@@ -37,12 +37,14 @@ HEADER
 -------------------------------- */
 
 header {
-	height: 200px;
+	height: 300px;
 	background-color:var(--white);
 }
 
 img {
-	width: 200px;
+	display: block;	
+	margin: 30px auto 10px auto;
+	width: 150px;
 }
 
 nav {
@@ -81,14 +83,18 @@ FOOTER
 
 footer {
 	text-align: center;
-	height: 250px;
-	width: 100%;
+	font-size: 8px;
+	color: var(--darkGrey);
 }
 
+footer h3 {font-weight: normal;}
+
 .footerKontakt {
-	
-	height: 200px;
-	background-color: var(--white);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	background-color: var(--red);
+	height: 130px;
 }
 
 .footerKontaktIkoner {
@@ -101,5 +107,6 @@ footer {
 }
 
 .footerCopyright {
-	height: 50px;
+	height: 20px;
+	margin: 20px;
 }
