--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,10 +37,38 @@ hr {
 }
 
 h1 {
+	margin: 3rem 0rem;
 	text-align: center;
 	font-weight: normal;
 	color: var(--darkGrey);
 }
+
+button {
+	background-color: var(--brown);
+	color: var(--white);
+	padding: 8px 16px;
+	text-transform: uppercase;
+	border: none;
+	border-radius: 5px;
+}
+
+button:hover {
+	background-color: var(--black);
+	cursor: pointer;
+}
+
+.tag {
+	background-color: var(--orange);
+	color: var(--white);
+	height: 2rem;
+	width: 8rem;
+	padding: 5px 16px;
+	text-transform: uppercase;
+	text-align: center;
+	border: none;
+	border-radius: 5px;
+}
+	
 
 /* --------------------------------
 HEADER
@@ -53,8 +81,8 @@ header {
 
 header img {
 	display: block;	
-	margin: 40px auto 20px auto;
-	width: 150px;
+	margin: 15px auto;
+	width: 260px;
 }
 
 nav ul {
@@ -97,8 +125,8 @@ MAIN - INDEX
 	display: flex;
 	align-items: flex-end;
 	text-align: center;
-	width: 25%;
-	height: 200px;
+	width: 30%;
+	height: 250px;
 	transition: all .2s ease-out;
 	background-image: url(/assets/images/Bagt\ brushetta_low.jpg);
 }
@@ -156,12 +184,10 @@ MAIN - OPSKRIFTSINDEX
 	height: 450px;
 	display: flex;
 	flex-direction: column;
-	transition: all .2s ease-out;
 }
 
 .opskriftGridItem:hover {
-	box-shadow: 5px 5px 10px var(--darkGrey);
-	transform: scale(1.1);
+	background-color: var(--red);
 }
 
 .opskriftGridItem p {
@@ -183,10 +209,7 @@ MAIN - OPSKRIFTSINDEX
 /* --------------------------------
 MAIN - OPSKRIFT
 -------------------------------- */
-.opskriftMain {
-	height: 500px;
-	
-}
+.opskriftMain {height: 500px;}
 
 .opskriftMain img {
 	margin-top: 2rem;
@@ -204,13 +227,18 @@ MAIN - OPSKRIFT
 }
 
 .opskrift h2, h3 {
+	margin-top: 2rem;
+	line-height: 0rem;
 	font-weight: normal;
 	padding: 0;
 }
 
+.opskrift > div > p {color: var(--darkGrey);}
+.opskrift > button {float: right; }
+.opskriftTxt {display: flex;}
+.opskriftTxt p {width: 50%;}
 
-
-.opskriftTags {
+.opskriftBeskrivelse {
 	color: var(--darkGrey);
 	display: flex;
 	justify-content: space-between;
@@ -218,14 +246,8 @@ MAIN - OPSKRIFT
 	border-bottom: 1px var(--orange) solid;
 }
 
-
-.opskriftFremgangsmåde {
-	display: flex;
-}
-
-.opskriftFremgangsmådeBox {
-	width: 50%;
-}
+.opskriftFremgangsmåde {display: flex;}
+.opskriftFremgangsmådeBox {width: 50%;}
 
 .opskriftFremgangsmåde ul {
 	margin: 0;
@@ -234,27 +256,30 @@ MAIN - OPSKRIFT
 }
 
 
-
 .opskriftKommentar {
 	display: flex;
 	margin-bottom: 2rem;
 }
-.opskriftKommentar img {
-	width: 50%;
+.opskriftKommentar img {width: 50%;}
+.opskriftKommentar p {padding: 0rem 1rem;}
+
+.opskriftTags {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	background-color: var(--red);
+	height: 240px;
+	margin: 2rem 0rem;
 }
 
-.opskriftKommentar p {
-	padding: 0rem 1rem;
-}
-
+.opskriftTags > div {width: 50%;}
 
 
 .opskriftBøger {
-	
 	margin: 2rem 0rem;
 	justify-content: space-between;
 	display: flex;
-
 }
 
 .opskriftBog {
@@ -262,20 +287,6 @@ MAIN - OPSKRIFT
 	background-color: var(--red);
 	width: 48%;
 	height: auto;
-}
-
-.opskriftBog button {
-	background-color: var(--brown);
-	color: var(--white);
-	padding: 8px 16px;
-	text-transform: uppercase;
-	border: none;
-	border-radius: 5px;
-}
-
-.opskriftBog button:hover {
-	background-color: var(--black);
-	cursor: pointer;
 }
 
 .opskriftBogBox {
@@ -347,7 +358,22 @@ footer h3 {font-weight: normal;}
 }
 
 .footerKontaktIkoner i {
-	margin: 0px 20px;
+	font-size: 1.5rem;
+	margin: 0px 10px;
+}
+
+.footerInfo {
+	justify-content: center;
+	display: flex;
+}
+
+.footerInfo p {
+	margin: 0rem 1rem;
+}
+
+.footerInfo div {
+	border-left: var(--orange) 1px solid;
+	border-right: var(--orange) 1px solid;
 }
 
 .footerCopyright {
