--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ MAIN - INDEX
 .imgTxt {
 	height: 50px;
 	width: 100%;
-	background-color: rgba(255, 255, 255, 0.521);
+	background-color: rgba(255, 255, 255, 0.788);
 	text-transform: uppercase;
 }
 
@@ -159,6 +159,7 @@ MAIN - INDEX
 	align-items: flex-end;
 	text-align: center;
 	transition: all .2s ease-out;
+	background-size: cover;
 	background-image: url(/assets/images/Bagt\ brushetta_low.jpg);
 }
 
@@ -166,6 +167,21 @@ MAIN - INDEX
 	box-shadow: 5px 5px 10px var(--darkGrey);
 	transform: scale(1.1);
 }
+
+.gridItem1 {background-image: url(/assets/images/Index/morgenmad.jpg);}
+.gridItem2 {background-image: url(/assets/images/Index/mindre-retter.jpg);}
+.gridItem3 {background-image: url(/assets/images/Index/store-maaltider.jpg);}
+.gridItem4 {background-image: url(/assets/images/Index/soede-sager.jpg);}
+.gridItem5 {background-image: url(/assets/images/Index/Tilbehoer.jpg);}
+.gridItem6 {background-image: url(/assets/images/Index/salater.jpg);}
+.gridItem7 {background-image: url(/assets/images/Index/supper.jpg);}
+.gridItem8 {background-image: url(/assets/images/Index/drikke.jpg);}
+.gridItem9 {background-image: url(/assets/images/Index/groen-jul.jpg);}
+.gridItem10 {background-image: url(/assets/images/Index/glutenfri.jpg);}
+.gridItem11 {background-image: url(/assets/images/Index/bagvaerk.jpg);}
+.gridItem12 {background-image: url(/assets/images/Index/guides.jpg);}
+
+
 
 /* --------------------------------
 MAIN - OPSKRIFTSINDEX
